# Test123

./: .breakpoints  main.py  pyproject.toml
templates/: 500.html  about.html  base.html  base1.html  checkout.html  checkout1.html  configdevices.html  contact.html  control.html  index.html  login.html  mindex.html  monitor (copy).html  monitor.html  password.html  securitymode.html  shop.html  style.css  userdetails.html
